--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.analysis.extraPaths": [ "/var/tmp/sage-10.3-current/venv/lib/python3.11/site-packages" ],
+    "python.analysis.extraPaths": [
+        "/var/tmp/sage-10.3-current/venv/lib/python3.11/site-packages"
+    ],
+    "python.analysis.typeCheckingMode": "off",
 }
